--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,8 @@
 
   // workbench
   "workbench.editor.enablePreview": false,
-  "workbench.iconTheme": "material-icon-theme",
-  "workbench.colorTheme": "Omni",
+  "workbench.iconTheme": "vs-seti",
+  "workbench.colorTheme": "Dracula",
 
   // prettier
   "editor.defaultFormatter": "esbenp.prettier-vscode",
